# ChangeLog for dev-python/alembic
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/alembic/ChangeLog,v 1.21 2015/06/23 07:05:09 patrick Exp $

*alembic-0.7.6 (23 Jun 2015)

  23 Jun 2015; Patrick Lauer <patrick@gentoo.org> +alembic-0.7.6.ebuild:
  Bump, tests may fail with newest sqlalchemy

  07 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Add bitbucket to remote-id in metadata.xml

  03 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Add pypi to remote-id in metadata.xml

  08 Mar 2015; Pacho Ramos <pacho@gentoo.org> alembic-0.7.4.ebuild:
  x86 stable, bug 540290

  06 Mar 2015; Pacho Ramos <pacho@gentoo.org> alembic-0.7.4.ebuild:
  amd64 stable, bug 540290

  02 Mar 2015; Ian Delaney <idella4@gentoo.org> -alembic-0.6.0.ebuild,
  -alembic-0.6.3.ebuild, -alembic-0.6.4.ebuild:
  remove some old

*alembic-0.7.4 (31 Jan 2015)

  31 Jan 2015; Matthew Thode <prometheanfire@gentoo.org> +alembic-0.7.4.ebuild:
  bump

*alembic-0.6.7 (05 Nov 2014)

  05 Nov 2014; Patrick Lauer <patrick@gentoo.org> +alembic-0.6.7.ebuild:
  Bump

  06 Jul 2014; Michał Górny <mgorny@gentoo.org> alembic-0.6.0.ebuild,
  alembic-0.6.3.ebuild, alembic-0.6.4.ebuild:
  Clean up obsolete dependencies on virtual/python-argparse and virtual/python-
  unittest2 (those packages were only required for <=python-2.6).

*alembic-0.6.4 (01 May 2014)

  01 May 2014; Ian Delaney <idella4@gentoo.org> +alembic-0.6.4.ebuild:
  bump; drop py2.6 3.2 add py3.4, upgrade test phase

  22 Mar 2014; Ian Delaney <idella4@gentoo.org> alembic-0.6.0.ebuild,
  alembic-0.6.3.ebuild:
  update deps for test phase, fixes Bug #501362 by our Patrick

*alembic-0.6.3 (15 Feb 2014)

  15 Feb 2014; Patrick Lauer <patrick@gentoo.org> +alembic-0.6.3.ebuild:
  Bump

  21 Jan 2014; Patrick Lauer <patrick@gentoo.org> -alembic-0.4.2.ebuild,
  -alembic-0.5.0.ebuild:
  Remove old

  22 Oct 2013; Jan Matejka <yac@gentoo.org> metadata.xml: