@@ -1,8 +1,10 @@
 DIST alembic-0.6.7.tar.gz 467942 SHA256 55c35e897d2970bae45345ff4c8a190e773a08f4289299de694ebfebfb0c6946 SHA512 21bf62bb035cac6686599ec3a5a7dcd8505ca590f37f5667990f18b3070b1490ca083950cec9714fe10947ca05df9598e14c69eb915d3e5d5d958414d00dc5f6 WHIRLPOOL b3a10fbef104167cbd89f08e6dfe00a2559b2e6d620026539af64911d23f5db60873c91c995d55204bbaed6646f2f7f9b834e477c690d0b5abd8050de3e1fdd9
 DIST alembic-0.7.4.tar.gz 604836 SHA256 550f10b2266f689778eced2fed899bfd05755737478454b97fb99385f2e780e5 SHA512 258d2f7fe046e7fd662fae0b68ba19988cc59fd1d0d8bb6e1b3b0ea133d076d649d6bc99933ac50be538d1c4d64062b2b2d259cb042d9bbddf7346d0283af383 WHIRLPOOL eaa17f8b0bd91ca8eb11292bc0be45443b43564b06ec1461c5d6b60dcbd3777c443c6a355164057334080a7dbf37f32cf591f176deb52afdb12d7ca79de4a766
 DIST alembic-0.7.6.tar.gz 623931 SHA256 864fa461265d6c97bcefee603e9ef0b6385bda9063d41b3db3e010abbba5ef61 SHA512 08d04f4ad0d5e8fe5741fab7480e6652f26449e393af4406c62acd7aa039618cce8db64ebf113565ee5b98c5e19a813b4ebd2ad15d68a717c48080a3418d517e WHIRLPOOL ce2a5894df399b773a1ee8e8163391fd05c3df8d8b5f6f31bd949f8e5a1ec7b4f837f1eb32e231ce5b5b831faedf35f685b02b02f88075125df2561b2ab64846
+DIST alembic-0.7.7.tar.gz 721855 SHA256 abdeded3f92766d30d2e00015f73573e23f96bcb38037fac199a75445e3e66c6 SHA512 5478987f37ca724e168fd4de4bd557ca3344aa0539ae25dd56fc05b855ec02004a1d8c3c14aa3f3715eaaa74431d1b25121810c3f197ba5def67afbbe41e62eb WHIRLPOOL e10e6930a559fa7a8e90dab83a08d3f9c2a252085d4732036e5e07c9b75329d851a64f6d68639eda88fdb136cfc43078434e23e5438551569ca55eb295a192a8
 EBUILD alembic-0.6.7.ebuild 1520 SHA256 ba00361f698a92c53c30dd50064d5782f109c8d8763de179388931eba3945ee2 SHA512 4108b8108b076f55210346daf3c2d0c7709440fa67ed3a75c05ba245b3a86243ec0d01a69f3cdbfcd29594f0c0c2434ab600a025b6e37660686954619eafa389 WHIRLPOOL 22d909a6f776ec80a7f6376ebb4f9bc5add6ea2587c0e206a3905dbbb41761be3fbacc71581cd0cad13f03ab383042ca019f2d25b964cb2d8f79ce2f8248f516
 EBUILD alembic-0.7.4.ebuild 1395 SHA256 3c2c577d11dc8edb05ea1a09b5cc67a8509ac47b09093981ca85f734c8e733b2 SHA512 84655c4bc493b352fe5fab32f3dd25cf6c299c3ea9a020e8779d83ad905a17b4016618672e2090db077533de33e2c071e12d915f34054a56e52df18475ece219 WHIRLPOOL a002ba24250e64579488d9e27e3cef16b29598f6772a12f4b54edac4c7f384f143e54d7923dd2bf7fc62b5e50179d016c64fa1bd2d9042db46a49d98659161d2
 EBUILD alembic-0.7.6.ebuild 1399 SHA256 6d51d592802b937543bc7c17630b4b527ede762f19cb621694f6143b5c13b489 SHA512 60d99f188d3c410e18cb2443f7f363c1eb0d34e0173512823e007f3801531c2e25f07f1a7783d1d89ed7dd9c51e2791fee84f955dd44501170aafd2a678df5f5 WHIRLPOOL 3008186506a1135377537f8490a905066d54418fe843f01213566b11c13e8b41a64aa3184b4d980882ada808a82d19d8e1fba26d2b027b86ebc1d2dd411c7965
-MISC ChangeLog 2958 SHA256 d2718157ea75c91348a63dd8a6417af6a656c5b82127b0d61b21bdda4fca0208 SHA512 800126155b25b1a17df1cd36c3ceee0e60b1d13e37e5d954fc0de992ed8c912dcc6d2e846a4a5525f8f12dd298129dfff32a6fbe8f06bfe39a9650b5c3861ef7 WHIRLPOOL c3aa5bed5a8eb31bcbbf1356a3e253312f144b6b1f64f13a603bd4237615775da67b71f48dec6671957653d72c792717d138c129a89bba089a18a5802dbb7848
+EBUILD alembic-0.7.7.ebuild 1399 SHA256 78f0454bbf178e83d50da1f9c40f982e977143e476d9bb8dad50bfc7639b2a9d SHA512 981b2af784755aa377fac7dcf1a0e575fd61e908ac7f52f595574e41a03eaab039ba9fd75f0bb6473323fd8bf3507c3f7cb7e31fdc1553aa5a513aa26988c0fe WHIRLPOOL 1d73e36f511be3eec771253d54130ce53ccabad707f5aba42ca59f465bf755244c06f68fbd39c17bba16a9f60273ba173d116f2fa6079b218d44e6a5935f0ce8
+MISC ChangeLog 3069 SHA256 8870f735ce578ac69b5b3110759881a7a71d24ef5183508ab2805d90f05b56c1 SHA512 410b377fc222e433f0d3bb953e12fe27a56d68c5a72d27f04ebee0673d1185df08665976b5680a657bbcc43fcd911646a9b86b9e689ed0135e59fd85558a61de WHIRLPOOL eaf4a36ab84d2760667874c91f6cc868be4ac554fed288a36240921e1f893f9308bbc3aff19f01f08f97ee1ba0b4af8e6f19c5f91c2b3d19801aa3dde1467bf3
 MISC metadata.xml 389 SHA256 84a0e5231abef9609b9ea7904bce37ab28987fad2304c5e622c600dd56b52109 SHA512 6cc0ba5ce5ba9168b6829d880399553012a1fa460dd5c1426323805828da0c01badcba01bcbeffba772b1398ea728ea9632d94ee61b7d8afcaa6679b4cd34d95 WHIRLPOOL abbc6128c5b4475d24046a8cf6ff3784e229f8f5eb61e884cb07ef7136bf464f672ea3eea59c93a2c93a24a4574384fcbd3eebe422562cbf847708c99bc67ed4
