@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/alembic
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/alembic/ChangeLog,v 1.21 2015/06/23 07:05:09 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/alembic/ChangeLog,v 1.22 2015/07/27 05:58:24 patrick Exp $
+
+*alembic-0.7.7 (27 Jul 2015)
+
+  27 Jul 2015; Patrick Lauer <patrick@gentoo.org> +alembic-0.7.7.ebuild:
+  Bump
 
 *alembic-0.7.6 (23 Jun 2015)
 
